<resources>
    <string name="app_name">ResiMate</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="enter_room_no">Enter Room No :</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="describe_the_problem">Describe the Problem</string>
    <string name="register_complaint">Register Complaint</string>
    <string name="register_student">Register Student</string>
    <string name="student_s_complaint">Student\'s Complaint</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_image">Select Image</string>
    <string name="upload_you_documents">Menu-Updation</string>
    <string name="view_rooms"><u>View Rooms</u></string>
    <string name="welcome">Welcome to our healthcare app\! These terms of use (the “Terms”) apply to your access and use of our healthcare app, including all related websites, mobile and desktop applications, services, and content provided through the app (collectively, the “App”). By accessing or using the App, you agree to be bound by these Terms. If you do not agree to these Terms, you may not access or use the App. The App is provided for informational purposes only and is not intended to be a substitute for professional medical advice, diagnosis, or treatment. Always seek the advice of your qualified healthcare provider with any questions you may have regarding a medical condition. You are responsible for the accuracy of any information you provide through the App, and you agree that the App will not be liable for any errors or omissions in the information you provide. You agree not to use the App for any purpose that is unlawful or prohibited by these Terms. You agree not to use the App in any way that could damage, disable, overburden, or impair the App or interfere with any other party’s use and enjoyment of the App. You may not modify, copy, distribute, transmit, display, perform, reproduce, publish, license, create derivative works from, transfer, or sell any information, software, products, or services obtained from the App. PRIVACY POLICY We are committed to protecting the privacy of our users. Our Privacy Policy explains how we collect, use, and protect information that you provide through the App. We may collect certain personal information from you when you use the App, such as your name, email address, and other contact information. We will never share this information with third parties. We will use the information we collect to provide you with the services and features available through the App. We may also use your information for internal purposes, such as to improve the App and our services, as well as to analyze and understand how our users use the App. We may also collect certain data from your use of the App, such as usage data and device data. This data will be used to analyze and understand how our users use the App, and to improve the App and our services. We may use third-party services to help us provide the App and our services. These services may collect or receive data from your use of the App, such as usage data and device data. We may disclose your personal information if required to do so by law or if we believe in good faith that such action is necessary to protect and defend the rights or property of the App or its users. We take reasonable steps to protect the security of your information. However, no data transmission over the internet or data storage system can be guaranteed to be 100% secure. As a result, we cannot guarantee the security of any information transmitted to or from the App. By using the App, you understand and agree that you are solely responsible for maintaining the security of your information.</string>
    <string name="terms_of_use_privacy_policy">Terms of use, privacy policy</string>

    <string-array name="floor">
        <item>Ground</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>

    <string-array name="dept">
        <item>Electrical</item>
        <item>Carpentry</item>
        <item>Mess</item>
        <item>Sports</item>
        <item>Plumbing</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>