<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uploadDocs">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_you_documents"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="85dp"
        android:layout_marginHorizontal="69dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="@font/ubuntu_bold"
        />

    <ImageView
        android:id="@+id/firebaseimg"
        android:layout_width="220dp"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="135dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/selImg"
        android:layout_marginBottom="45dp"
        android:layout_marginHorizontal="45dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_box"
        app:layout_constraintTop_toBottomOf="@id/firebaseimg"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="45dp"
        android:text="@string/select_image"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/ubuntu_medium"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        app:layout_constraintTop_toBottomOf="@id/selImg"
        android:layout_marginTop="110dp"
        android:layout_marginHorizontal="45dp"
        android:text="@string/upload_image"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/ubuntu_medium"
        />

</androidx.constraintlayout.widget.ConstraintLayout>