<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterComplaint">

    <LinearLayout
        android:id="@+id/dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Department : "
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="20sp"
            android:textAllCaps="false" />

        <Spinner
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deptSpinner"
            android:entries="@array/dept"
            style="@style/Spinnerstyle"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/dept"
        android:layout_marginTop="65dp"
        android:background="@drawable/contraint_outline"
        >
        <TextView
            android:id="@+id/room_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_room_no"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            />
        <EditText
            android:id="@+id/enter_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/room_text"
            app:layout_constraintBottom_toBottomOf="@id/room_text"
            android:layout_marginBottom="-8dp"
            android:hint="Enter Room No."
            />
        <TextView
            android:id="@+id/related_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Problem Related to :"
            app:layout_constraintLeft_toLeftOf="@id/room_text"
            app:layout_constraintTop_toBottomOf="@id/room_text"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/related_prob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/related_text"
            app:layout_constraintBottom_toBottomOf="@id/related_text"
            android:layout_marginBottom="-8dp"
            android:hint="@string/enter_the_title"
            />
        <EditText
            android:id="@+id/problem_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/related_text"
            app:layout_constraintTop_toBottomOf="@id/related_text"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/describe_the_problem"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_complaint"
        android:textAllCaps="false"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/constraint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="65dp"
        android:paddingHorizontal="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>